# retino-cnn

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.yml  poetry.toml  pyproject.toml
app/: main.py
app/models/: outputs.py  retino_cnn.py
app/service/controllers/: __init__.py  base.py  classify.py  predict.py
app/service/events/: __init__.py  loggers.py  shutdown.py  startup.py
app/service/schemas/: requests.py  responses.py
app/utils/: __init__.py  errors.py  exception_handlers.py
deploy/docker/api/: Dockerfile
deploy/docker/python/base/: Dockerfile
notebooks/: 01_data_download.ipynb  01_exploration.ipynb  02_data_cleanup.ipynb  03_explore_images.ipynb  04_custom_cnn_classifier.ipynb  05_pytorch_lightning_model.ipynb  06_resnet_model.ipynb  demo.ipynb  experiments.ipynb  exploration.ipynb  image_transformations.ipynb  initial_experiments.ipynb  lightning.ipynb  lightning_model.ipynb  resnet34_model.ipynb  resnet_model.ipynb
scripts/data/: configure_envs.py  download_data.py  rename_files.py
scripts/models/: export_onnx.py  import_onnx.py  lightning_model.py  resnet.py
src/: main.py
src/data/: download_data.py  input_env.py  rename_files.py  train_val_split.py  train_val_test_split.py
