[tool.poetry]
name = "brain-cnn"
version = "0.1.0"
description = "An app using CNN to determine if cancer is present or not in given brain CT scan."
authors = ["isulim <igosulim@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.1"
pandas = "^2.2.1"
torchvision = "^0.17.1"
numpy = "^1.26.4"
fastapi = "^0.110.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ruff = "^0.2.2"
jupyter = "^1.0.0"
notebook = "^7.1.1"
optuna = "^3.5.0"
mlflow = "^2.10.2"
kaggle = "^1.6.6"
split-folders = "^0.5.1"
tabulate = "^0.9.0"
lightning = "^2.2.1"
tqdm = "^4.66.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
