[tool.poetry]
name = "retino-cnn"
version = "0.1.0"
description = "An app using CNN to determine existence of diabetic retinopathy."
authors = ["isulim <igosulim@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
litestar = "^2.8.2"
onnx = "^1.16.0"

[tool.poetry.group.dev.dependencies]
torch = "^2.2.1"
pandas = "^2.2.1"
torchvision = "^0.17.1"
numpy = "^1.26.4"
jupyter = "^1.0.0"
notebook = "^7.1.1"
kaggle = "^1.6.6"
split-folders = "^0.5.1"
tabulate = "^0.9.0"
lightning = "^2.2.1"
tqdm = "^4.66.2"
tensorboard = "^2.16.2"
torchmetrics = "^1.3.1"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
pytest-sugar = "^1.0.0"

[tool.poetry.group.linters.dependencies]
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
